<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReadingListening.Part5">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_activity" />
    <Button
        android:id="@+id/nextPart5Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/Next"
        android:background="@drawable/bg_radius_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/part5saveBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_circle"
        android:drawableTop="@android:drawable/ic_menu_save"
        android:paddingTop="5dp"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/titlePart5TV"
        android:layout_width="366dp"
        android:layout_height="65dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/sanchez"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonA_part5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePart5TV" />

    <Button
        android:id="@+id/buttonB_part5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonA_part5" />

    <Button
        android:id="@+id/buttonC_part5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonB_part5" />

    <Button
        android:id="@+id/buttonD_part5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonC_part5" />

    <TextView
        android:id="@+id/textViewA_part5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/buttonA_part5"
        app:layout_constraintTop_toBottomOf="@+id/titlePart5TV" />

    <TextView
        android:id="@+id/textViewB_part5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/buttonB_part5"
        app:layout_constraintTop_toBottomOf="@+id/textViewA_part5" />

    <TextView
        android:id="@+id/textViewC_part5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/buttonC_part5"
        app:layout_constraintTop_toBottomOf="@+id/textViewB_part5" />

    <TextView
        android:id="@+id/textViewD_part5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/buttonD_part5"
        app:layout_constraintTop_toBottomOf="@+id/textViewC_part5" />
</androidx.constraintlayout.widget.ConstraintLayout>