<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Speaking.SpeakingQuestionDetailActicity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="405dp"
        android:fontFamily="@font/lobster"
        android:layout_height="43dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/speakingTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="682dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionNumberTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:fontFamily="@font/sanchez"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contentQuestionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:fontFamily="@font/sanchez"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/speakingImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/questionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:fontFamily="@font/sanchez"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/countdownTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRecord"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_radius_button"
                android:text="@string/RecordBtn"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_radius_button"
                android:text="@string/ListenAgainBtn"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/uploadRecordBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_radius_button"
                android:text="@string/UploadRecord"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/otherRecordBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_radius_button"
                android:text="@string/OtherRecordBtn"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>