<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WritingQuestionDetailActivity">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="405dp"
        android:layout_height="43dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/writingTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/writingQuestionNumberTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="TextView" />

            <TextView
                android:id="@+id/writingContentQuestionTV"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <ImageView
                android:id="@+id/writingImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/writingDirectionTV"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="TextView" />
            <TextView
                android:id="@+id/writingWordTV"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <ImageView
                android:id="@+id/uploadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />
            <Button
                android:id="@+id/uploadImageBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_button"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/uploadBtn" />
            <Button
                android:id="@+id/pickImage"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_button"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/pickImageBtn" />
            <Button
                android:id="@+id/exampleAnswerBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_button"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/exampleAnswerBtn" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>