<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Auth.ForgetPasswordActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_activity" />
    <EditText
        android:id="@+id/emailForgetET"
        android:layout_width="340dp"
        android:layout_height="65dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:paddingStart="10dp"
        android:fontFamily="@font/sanchez"
        android:hint="Nhập email"
        android:inputType="textPersonName"
        android:minHeight="48dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/submitBT"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/black"
        android:background="@drawable/bg_radius_button"
        android:textColor="@color/white"
        android:text="@string/confirm_button"
        app:layout_constraintEnd_toEndOf="@+id/emailForgetET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailForgetET"
        app:layout_constraintTop_toBottomOf="@+id/emailForgetET" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="327dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:text="@string/forget_password_title"
        android:textSize="30dp"
        android:fontFamily="@font/lobster"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:text="@string/confirm_email"
        android:fontFamily="@font/sanchez"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>