<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Home.DictionaryActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_activity" />

    <TextView
        android:id="@+id/DicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/lobster"
        android:text="@string/dictionary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="412dp"
        android:layout_height="521dp"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SearchBar"
        android:layout_width="389dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_radius_button_2"
        android:ems="10"
        android:hint="Tìm kiếm Tiếng Anh"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DicTextView" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_quiz_question"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:text="@string/SearchBtn"
        app:layout_constraintEnd_toEndOf="@+id/SearchBar"
        app:layout_constraintTop_toBottomOf="@+id/DicTextView" />

    <TextView
        android:id="@+id/translateTV"
        android:layout_width="389dp"
        android:layout_height="123dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sanchez"
        android:gravity="center"
        android:text="@string/definition"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/SearchBar"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/SearchBar"
        app:layout_constraintTop_toBottomOf="@+id/SearchBar" />

    <TextView
        android:id="@+id/symTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/lobster"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/webView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>